# Burning-Man-Art-Collector

./: .gitignore  AGENTS.md  README.md  START_HERE.md  package-lock.json  package.json
burning-man-art-scraper/: .env.example  .gitignore  README.md  pyproject.toml  run_aggregator_hub.py  run_artelier_scraper_export.py  run_bm_ingest.py  run_identity.py  run_scraper.py  run_verify.py
burning-man-art-scraper/config/: artelier_deploy.yaml  artelier_field_mapping.yaml  artelier_import_schema.yaml  burning_man_schema.json  default.yaml
burning-man-art-scraper/contracts/artelier-scraper-v1/: COLLECTOR.md  README.md  (+4 more)
burning-man-art-scraper/docs/: burning_man_ingestion_rules.md
burning-man-art-scraper/scripts/: enrich_artelier_upload_coords.py
burning-man-art-scraper/tests/: test_aggregator_hub.py  test_alias_resolver.py  test_artelier_aggregator.py  test_artelier_schema.py  test_artelier_scraper_csv_v1_export.py  test_artist_website_evidence.py  test_artist_website_invariants.py  test_artist_website_normalize.py  test_batch.py  test_bm_identity_ingest.py  test_bm_ingest.py  test_enrichment.py  test_enrichment_processor.py  test_enrichment_providers.py  test_enrichment_research.py  test_export_filtered_csv.py  test_exporter.py  test_fetcher.py  test_identity_classifier.py  test_inline_archive.py  test_inspection.py  test_interactive_input.py  test_prepare_pipeline.py  test_preview_approval.py  test_record_parser.py  test_state.py  test_url_utils.py  test_verification.py  test_www_preview_paths.py  test_www_template_guard.py
burning-man-art-scraper/viewer/: index.html
(+124 files in other folders)
