[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "burning-man-art-scraper"
version = "0.1.0"
description = "Standalone Burning Man art archive scraper"
requires-python = ">=3.10"
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
dev = ["pytest>=8"]
search = ["ddgs>=9", "duckduckgo-search>=6"]
